added support for latest 3dcitydb schema mapping changes